# templateofclientservermatching

./: .gitignore  CMakeLists.txt  CMakeListsGitSubModule.txt  readme.md
src/: Tests.cpp
src/client/: client.cpp  client.hpp  main.cpp
src/common/: Common.hpp
src/server/: core.cpp  core.hpp  main.cpp  order.cpp  order.hpp  server.cpp  server.hpp  session.cpp  session.hpp  user.cpp  user.hpp
